--- a/SimpleTesterApp/SimpleTesterApp.csproj
+++ b/SimpleTesterApp/SimpleTesterApp.csproj
@@ -71,10 +71,14 @@
   <ItemGroup>
     <Compile Include="StartProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Input.cs" />
+    <Compile Include="InputData\InputDataProcessing.cs" />
+    <Compile Include="InputData\InputDataGetter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="InputData\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
